--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "firebase": "^4.13.1",
     "jquery": "^3.3.1",
+    "ngx-pagination": "^3.1.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
